--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -21,14 +21,14 @@
     "test": "dts test"
   },
   "dependencies": {
-    "@envelop/parser-cache": "4.6.0",
-    "@envelop/response-cache": "3.1.0",
-    "@envelop/response-cache-redis": "1.1.0",
-    "@envelop/validation-cache": "4.6.0",
-    "@graphql-authz/core": "1.2.1",
-    "@graphql-authz/envelop-plugin": "1.0.3",
+    "@envelop/parser-cache": "4.7.0",
+    "@envelop/response-cache": "3.2.0",
+    "@envelop/response-cache-redis": "1.2.0",
+    "@envelop/validation-cache": "4.7.0",
+    "@graphql-authz/core": "1.3.0",
+    "@graphql-authz/envelop-plugin": "1.0.4",
     "@graphql-hive/client": "0.18.3",
-    "@graphql-yoga/node": "2.13.11",
+    "@graphql-yoga/node": "2.13.13",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.9",
     "@vendia/serverless-express": "4.10.1",
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@azure/functions": "3.2.0",
-    "@graphql-hive/cli": "0.18.2",
+    "@graphql-hive/cli": "0.19.0",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/cookie-parser": "^1.4.3",
@@ -60,17 +60,17 @@
     "dts-cli": "1.6.0",
     "husky": "8.0.1",
     "ioredis-mock": "8.2.2",
-    "jest": "29.0.1",
+    "jest": "29.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
     "prisma": "4.3.1",
-    "size-limit": "8.0.1",
+    "size-limit": "8.1.0",
     "supertest": "6.2.4",
-    "ts-jest": "29.0.0-next.1",
+    "ts-jest": "29.0.1",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.8.2"
+    "typescript": "4.8.3"
   },
   "volta": {
     "extends": "../../package.json"
