--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
-    "@fortawesome/fontawesome-svg-core": "6.1.2",
-    "@fortawesome/free-regular-svg-icons": "6.1.2",
-    "@fortawesome/free-solid-svg-icons": "6.1.2",
+    "@bigheads/core": "0.3.3",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-regular-svg-icons": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
@@ -40,22 +41,21 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@bigheads/core": "0.3.3",
     "@types/body-parser": "^1.19.2",
     "@types/node": "^18.0.0",
     "@types/object-hash": "2.2.1",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/sharp": "0.30.5",
-    "autoprefixer": "10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "@types/sharp": "^0.30.5",
+    "autoprefixer": "10.4.10",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
-    "typescript": "4.8.2"
+    "typescript": "4.8.3"
   },
   "volta": {
     "extends": "../../package.json"
