--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -36,7 +36,7 @@
     "@klicker-uzh/prisma": "^2.0.0-alpha.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.11.6",
+    "@graphql-codegen/cli": "2.12.0",
     "@graphql-codegen/fragment-matcher": "3.3.1",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typed-document-node": "2.3.3",
@@ -44,29 +44,29 @@
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@graphql-codegen/typescript-resolvers": "2.7.3",
-    "@size-limit/preset-small-lib": "8.0.1",
+    "@size-limit/preset-small-lib": "8.1.0",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.0.0",
+    "@types/jest": "^29.0.0",
     "@types/validator": "^13.7.5",
     "@uzh-bf/design-system": "0.0.38",
     "husky": "8.0.1",
     "ioredis": "5.2.3",
-    "jest": "29.0.1",
+    "jest": "29.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
-    "size-limit": "8.0.1",
-    "tsup": "6.2.2",
-    "typescript": "4.8.2"
+    "size-limit": "8.1.0",
+    "tsup": "6.2.3",
+    "typescript": "4.8.3"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.5",
-    "dotenv": "16.0.1",
+    "dotenv": "16.0.2",
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.18.0",
