--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -14,6 +14,7 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@radix-ui/react-tooltip": "1.0.0",
     "@uzh-bf/design-system": "0.0.39",
     "deepmerge": "4.2.2",
     "graphql": "16.6.0",
