--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "format": "prettier --write .",
     "start": "next start --port 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pushTest": "node src/testPush.js"
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
@@ -53,6 +54,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/sharp": "^0.30.5",
+    "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.10",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
@@ -61,7 +63,8 @@
     "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
     "tailwindcss-radix": "2.6.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "web-push": "3.5.0"
   },
   "volta": {
     "extends": "../../package.json"
