--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write .",
     "start": "next start --port 3001",
     "lint": "next lint",
-    "pushTest": "node src/testPush.js"
+    "pushTest": "node src/testPush.js",
+    "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts"
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
@@ -63,6 +64,7 @@
     "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
     "tailwindcss-radix": "2.6.0",
+    "ts-node": "10.9.1",
     "typescript": "4.8.3",
     "web-push": "3.5.0"
   },
