--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -1,2 +1,7 @@
-API_DOMAIN=127.0.0.1
 COOKIE_DOMAIN=127.0.0.1
+API_DOMAIN=$COOKIE_DOMAIN
+S3_PATHNAME="/klicker-uzh-dev/**"
+S3_HOSTNAME="sos-ch-dk-2.exo.io"
+
+NEXT_PUBLIC_ADD_RESPONSE_URL="http://127.0.0.1:7072/api/AddResponse"
+NEXT_PUBLIC_API_URL="http://127.0.0.1:7071/api/graphql"
