--- a/.github/workflows/v2_frontend-pwa-docker.yml
+++ b/.github/workflows/v2_frontend-pwa-docker.yml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: apps/frontend-pwa
-          file: Dockerfile
+          file: apps/frontend-pwa/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
