--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -3,5 +3,5 @@ API_DOMAIN=backend-sls.$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
-NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.klicker-qa.bf-app.ch"
-NEXT_PUBLIC_API_URL="https://backend-sls.klicker-qa.bf-app.ch"
+NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.klicker-qa.bf-app.ch/api/AddResponse"
+NEXT_PUBLIC_API_URL="https://backend-sls.klicker-qa.bf-app.ch/api/graphql"
