--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,34 +9,34 @@ updates:
     directory: "/apps/backend-sls"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/apps/frontend-learning"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/apps/frontend-manage"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/apps/frontend-pwa"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/packages/graphql"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/packages/prisma"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/packages/lti"
     target-branch: v2
     schedule:
-      interval: "daily"
+      interval: "weekly"
