--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,12 +6,17 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    directory: "/apps/backend-sls"
+    directory: "/apps/backend-docker"
     target-branch: v2
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
-    directory: "/apps/frontend-learning"
+    directory: "/apps/backend-responses"
+    target-branch: v2
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/apps/backend-response-processor"
     target-branch: v2
     schedule:
       interval: "weekly"
@@ -22,6 +27,11 @@ updates:
       interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/apps/frontend-pwa"
+    target-branch: v2
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/packages/grading"
     target-branch: v2
     schedule:
       interval: "weekly"
@@ -37,6 +47,11 @@ updates:
       interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/packages/lti"
+    target-branch: v2
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/packages/markdown"
     target-branch: v2
     schedule:
       interval: "weekly"
