--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -22,7 +22,8 @@
     "prisma:deploy:prod": "dotenv -e .env.production -- npm run prisma:deploy",
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
     "prisma:push:qa": "dotenv -e .env.qa -- npm run prisma:push",
-    "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma",
+    "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
+    "prisma:reset:seed": "prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:reset:qa": "dotenv -e .env.qa -- npm run prisma:reset",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
     "prisma:studio:qa": "dotenv -e .env.qa -- npm run prisma:studio",
