--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ secrets*.yaml
 **/.DS_Store
 *.pem
 
+cypress/videos/*
+!cypress/videos/.gitkeep
+cypress/screenshots/*
+!cypress/screenshots/.gitkeep
+
 /apps/functions/local.settings.json
 
 .vscode
