--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "start": "turbo run start"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^9.0.0",
-    "cypress": "^12.1.0",
+    "@testing-library/cypress": "9.0.0",
+    "cypress": "12.1.0",
     "standard-version": "9.5.0",
     "turbo": "1.6.3",
     "yaml": "2.1.3"
