--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -16,16 +16,16 @@
     "build:watch": "NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma",
-    "prisma:deploy": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma",
+    "prisma:deploy": "doppler run --config dev -- prisma migrate deploy --schema=src/prisma/schema.prisma",
     "prisma:deploy:qa": "doppler run --config stg -- npm run prisma:deploy",
     "prisma:deploy:prod": "doppler run --config prd -- npm run prisma:deploy",
-    "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
+    "prisma:push": "doppler run --config dev -- prisma db push --schema=src/prisma/schema.prisma",
     "prisma:push:qa": "doppler run --config stg -- npm run prisma:push",
-    "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
-    "prisma:reset:seed": "prisma migrate reset --schema=src/prisma/schema.prisma",
+    "prisma:reset": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
+    "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:reset:qa": "doppler run --config stg -- npm run prisma:reset",
-    "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
+    "prisma:studio": "doppler run --config dev -- prisma studio --schema=src/prisma/schema.prisma",
     "prisma:studio:qa": "doppler run --config stg -- npm run prisma:studio",
     "prisma:studio:prod": "doppler run --config prd -- npm run prisma:studio",
     "preseed": "npm run build",
