--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -38,6 +38,7 @@
     "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
+    "react-colorful": "5.6.1",
     "react-d3-speedometer": "2.0.0-rc.3",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
