--- a/packages/graphql/.prettierignore
+++ b/packages/graphql/.prettierignore
@@ -5,3 +5,8 @@ dist/
 /src/ops.ts
 /src/graphql/schema.graphql
 /src/types/nexus-typegen.ts
+
+/src/persisted-queries/client.json
+/src/persisted-queries/server.json
+/src/public/client.json
+/src/public/server.json
