--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -23,7 +23,7 @@
     "@klicker-uzh/prisma": "^3.0.0-alpha.0",
     "@sentry/nextjs": "7.21.1",
     "@socialgouv/matomo-next": "1.4.0",
-    "@uzh-bf/design-system": "1.0.22",
+    "@uzh-bf/design-system": "1.0.23",
     "d3": "7.6.1",
     "dayjs": "1.11.6",
     "deepmerge": "4.2.2",
@@ -38,6 +38,7 @@
     "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
+    "react-colorful": "5.6.1",
     "react-d3-speedometer": "2.0.0-rc.3",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
