--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -17,17 +17,21 @@
     "format": "prettier --write .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
     "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma",
-    "prisma:deploy": "doppler run --config dev -- prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "prisma:deploy:qa": "doppler run --config stg -- npm run prisma:deploy",
-    "prisma:deploy:prod": "doppler run --config prd -- npm run prisma:deploy",
-    "prisma:push": "doppler run --config dev -- prisma db push --schema=src/prisma/schema.prisma",
-    "prisma:push:qa": "doppler run --config stg -- npm run prisma:push",
-    "prisma:reset": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
+    "prisma:deploy:raw": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "prisma:deploy": "doppler run --config dev -- npm run prisma:deploy:raw",
+    "prisma:deploy:qa": "doppler run --config stg -- npm run prisma:deploy:raw",
+    "prisma:deploy:prod": "doppler run --config prd -- npm run prisma:deploy:raw",
+    "prisma:push:raw": "prisma db push --schema=src/prisma/schema.prisma",
+    "prisma:push": "doppler run --config dev -- npm run prisma:push:raw",
+    "prisma:push:qa": "doppler run --config stg -- npm run prisma:push:raw",
+    "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
+    "prisma:reset": "doppler run --config dev -- npm run prisma:reset:raw",
     "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
-    "prisma:reset:qa": "doppler run --config stg -- npm run prisma:reset",
-    "prisma:studio": "doppler run --config dev -- prisma studio --schema=src/prisma/schema.prisma",
-    "prisma:studio:qa": "doppler run --config stg -- npm run prisma:studio",
-    "prisma:studio:prod": "doppler run --config prd -- npm run prisma:studio",
+    "prisma:reset:qa": "doppler run --config stg -- npm run prisma:reset:raw",
+    "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
+    "prisma:studio": "doppler run --config dev -- npm run prisma:studio:raw",
+    "prisma:studio:qa": "doppler run --config stg -- npm run prisma:studio:raw",
+    "prisma:studio:prod": "doppler run --config prd -- npm run prisma:studio:raw",
     "preseed": "npm run build",
     "seed": "ENV=development doppler run --config dev -- npm-run-all seed:test",
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
