--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -13,7 +13,7 @@
     "build": "NODE_ENV=production tsup --dts",
     "dev": "doppler run --config dev -- npm-run-all --parallel dev:graphql dev:ts",
     "dev:ts": "NODE_ENV=development tsup --watch --dts",
-    "dev:graphql": "graphql-codegen --config codegen.ts --watch",
+    "dev:graphql": "graphql-codegen --config codegen.ts --watch '**/**.graphql' --watch '**/**.ts'",
     "format": "prettier --write .",
     "generate": "graphql-codegen --config codegen.ts",
     "push": "ts-node --esm src/lib/push.ts",
