--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -77,7 +77,7 @@
     "typescript": "4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "4.8.1"
+    "@prisma/client": "^4.10.0"
   },
   "volta": {
     "extends": "../../package.json"
