--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -58,7 +58,7 @@
   ],
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "9.1.6",
-    "@pothos/plugin-prisma": "3.39.0",
+    "@pothos/plugin-prisma": "3.41.0",
     "@size-limit/preset-small-lib": "8.1.2",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
@@ -77,7 +77,7 @@
     "typescript": "4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.1"
+    "@prisma/client": "4.8.1"
   },
   "volta": {
     "extends": "../../package.json"
