--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -20,28 +20,28 @@
   },
   "dependencies": {
     "@klicker-uzh/grading": "^3.0.0-alpha.0",
-    "@sentry/node": "7.16.0",
-    "ioredis": "5.2.4",
-    "jsonwebtoken": "8.5.1",
+    "@sentry/node": "7.37.2",
+    "ioredis": "5.3.1",
+    "jsonwebtoken": "9.0.0",
     "md5": "2.3.0",
     "ramda": "0.28.0"
   },
   "devDependencies": {
-    "@azure/functions": "3.2.0",
-    "@tsconfig/node18": "1.0.1",
-    "@tsconfig/recommended": "1.0.1",
-    "@types/jsonwebtoken": "^8.5.9",
+    "@azure/functions": "3.5.0",
+    "@tsconfig/node18": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/md5": "2.3.2",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
-    "@uzh-bf/design-system": "1.2.0",
+    "@uzh-bf/design-system": "1.2.1",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
-    "husky": "8.0.1",
+    "husky": "8.0.3",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
-    "tsup": "6.6.0",
-    "typescript": "4.9.4"
+    "tsup": "6.6.2",
+    "typescript": "4.9.5"
   },
   "volta": {
     "extends": "../../package.json"
