--- a/legacy/backend-sls/package.json
+++ b/legacy/backend-sls/package.json
@@ -35,21 +35,21 @@
     "cookie-parser": "1.4.6",
     "express": "4.18.2",
     "graphql": "16.6.0",
-    "ioredis": "5.2.4",
-    "jsonwebtoken": "8.5.1",
+    "ioredis": "5.3.1",
+    "jsonwebtoken": "9.0.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0"
   },
   "devDependencies": {
-    "@azure/functions": "3.2.0",
+    "@azure/functions": "3.5.0",
     "@graphql-hive/cli": "0.19.0",
-    "@tsconfig/node18": "1.0.1",
-    "@tsconfig/recommended": "1.0.1",
+    "@tsconfig/node18": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^29.0.0",
-    "@types/jsonwebtoken": "^8.5.9",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.0.0",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
@@ -58,16 +58,16 @@
     "axios": "1.1.3",
     "dotenv": "16.0.3",
     "dts-cli": "1.6.0",
-    "husky": "8.0.1",
+    "husky": "8.0.3",
     "ioredis-mock": "8.2.2",
-    "jest": "29.2.1",
+    "jest": "29.4.2",
     "npm-run-all": "4.1.5",
     "prisma": "4.10.0",
-    "size-limit": "8.1.2",
+    "size-limit": "8.2.4",
     "supertest": "6.3.0",
     "ts-jest": "29.0.3",
-    "tsup": "6.6.0",
-    "typescript": "4.9.4"
+    "tsup": "6.6.2",
+    "typescript": "4.9.5"
   },
   "volta": {
     "extends": "../../package.json"
