--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "Luca Locher <luca.locher@bf.uzh.ch>",
     "Maximilian Weber <maximilian.weber@bf.uzh.ch>",
     "Jonas Gebel <jonas.gebel@bf.uzh.ch>",
-    "Florina Vogel <florina.vogel@bf.uzh.ch>"
+    "Florina Vogel <florina.vogel@bf.uzh.ch>",
+    "Valentin Meyer <valentin.meyer@bf.uzh.ch>"
   ],
   "scripts": {
     "dev": "doppler run --config dev -- turbo run dev",
     "build": "turbo run build",
     "publish": "turbo run publish",
     "format": "turbo run format",
-    "release": "standard-version --dry-run",
-    "release:dry": "standard-version --dry-run",
+    "//release": "standard-version --dry-run",
+    "//release:dry": "standard-version --dry-run",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
     "release:alpha:dry": "standard-version --dry-run --prerelease alpha",
     "release:beta": "standard-version --prerelease beta --no-verify",
@@ -52,12 +53,12 @@
   "devDependencies": {
     "@testing-library/cypress": "9.0.0",
     "azure-functions-core-tools": "4.0.4915",
-    "cypress": "12.1.0",
+    "cypress": "12.5.1",
     "prettier": "2.8.4",
-    "prettier-plugin-organize-imports": "3.2.1",
+    "prettier-plugin-organize-imports": "3.2.2",
     "standard-version": "9.5.0",
     "turbo": "1.7.4",
-    "yaml": "2.1.3"
+    "yaml": "2.2.1"
   },
   "dependencies": {
     "@prisma/client": "4.8.1",
