--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -17,7 +17,6 @@
     "format": "prettier --write .",
     "generate": "graphql-codegen --config codegen.ts",
     "push": "ts-node --esm src/lib/push.ts",
-    "schema": "ts-node --esm src/index.ts",
     "size": "size-limit"
   },
   "engines": {
@@ -36,7 +35,7 @@
   "peerDependencies": {
     "@klicker-uzh/grading": "^3.0.0-alpha.0",
     "@klicker-uzh/prisma": "^3.0.0-alpha.0",
-    "graphql-yoga": "^3.0.0"
+    "graphql-yoga": "^3.6.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.0.0",
@@ -47,9 +46,9 @@
     "@graphql-codegen/typescript": "3.0.0",
     "@graphql-codegen/typescript-operations": "3.0.0",
     "@graphql-codegen/typescript-resolvers": "3.0.0",
-    "@size-limit/preset-small-lib": "8.1.2",
-    "@tsconfig/node18": "1.0.1",
-    "@tsconfig/recommended": "1.0.1",
+    "@size-limit/preset-small-lib": "8.2.4",
+    "@tsconfig/node18": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
@@ -60,11 +59,11 @@
     "@types/web-push": "^3.3.2",
     "dotenv": "16.0.3",
     "graphql-codegen-persisted-query-ids": "0.1.2",
-    "husky": "8.0.1",
-    "ioredis": "5.2.4",
-    "jest": "29.2.1",
+    "husky": "8.0.3",
+    "ioredis": "5.3.1",
+    "jest": "29.4.2",
     "npm-run-all": "4.1.5",
-    "size-limit": "8.1.2",
+    "size-limit": "8.2.4",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
     "tsup": "6.6.2",
@@ -77,13 +76,13 @@
     "@pothos/plugin-scope-auth": "3.18.0",
     "@pothos/plugin-validation": "3.9.0",
     "bcryptjs": "2.4.3",
-    "dayjs": "1.11.6",
+    "dayjs": "1.11.7",
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.20.1",
-    "mathjs": "11.4.0",
-    "node-schedule": "2.1.0",
-    "validator": "13.7.0",
+    "mathjs": "11.5.1",
+    "node-schedule": "2.1.1",
+    "validator": "13.9.0",
     "zod": "3.20.6"
   },
   "volta": {
