--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -27,15 +27,15 @@
     "next": "^13.0.0"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "8.1.2",
-    "@tsconfig/node18": "1.0.1",
-    "@tsconfig/recommended": "1.0.1",
-    "size-limit": "8.1.2",
-    "tsup": "6.6.0",
-    "typescript": "4.9.4"
+    "@size-limit/preset-small-lib": "8.2.4",
+    "@tsconfig/node18": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.2",
+    "size-limit": "8.2.4",
+    "tsup": "6.6.2",
+    "typescript": "4.9.5"
   },
   "dependencies": {
-    "body-parser": "1.20.0"
+    "body-parser": "1.20.1"
   },
   "volta": {
     "extends": "../../package.json"
