--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -15,14 +15,14 @@
     "@tailwindcss/typography": "^0.5.7",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@uzh-bf/design-system": "1.2.0",
+    "@uzh-bf/design-system": "1.2.1",
     "dayjs": "^1.11.6",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "yup": "^1.0.0-beta.8"
+    "yup": "^1.0.0"
   },
   "volta": {
     "extends": "../../package.json"
