--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -41,7 +41,8 @@
     "seed:prod": "ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
     "seed:prod:bf1": "npm run seed:qa:bf1",
     "seed:prod:ami": "npm run seed:qa:ami",
-    "seed:prod:achievements": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedAchievements.ts",
+    "seed:prod:achievements": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
+    "seed:prod:user": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedUser.ts",
     "size": "size-limit"
   },
   "prisma": {
