--- a/legacy/db/package.json
+++ b/legacy/db/package.json
@@ -7,7 +7,9 @@
     "index.js",
     "models"
   ],
-  "scripts": {},
+  "scripts": {
+    "export": "doppler run --config prd -- node export.js"
+  },
   "peerDependencies": {
     "lodash": "4.17.21",
     "mongoose": "5.13.7",
@@ -18,6 +20,7 @@
     "dotenv": "^16.0.1"
   },
   "volta": {
-    "extends": "../../package.json"
+    "extends": "../../package.json",
+    "node": "16.19.0"
   }
 }
