--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -9,12 +9,13 @@
     "format": "prettier --write ."
   },
   "peerDependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@uzh-bf/design-system": "1.2.3",
     "dayjs": "^1.11.6",
     "ramda": "^0.28.0",
@@ -22,7 +23,11 @@
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "is-hotkey": "^0.2.0",
+    "slate": "^0.90.0",
+    "slate-history": "^0.86.0",
+    "slate-react": "^0.91.0"
   },
   "volta": {
     "extends": "../../package.json"
