--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -16,18 +16,18 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
-    "@uzh-bf/design-system": "1.2.3",
+    "@uzh-bf/design-system": "^1.3.0",
     "dayjs": "^1.11.6",
+    "is-hotkey": "^0.2.0",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
+    "slate": "^0.90.0",
+    "slate-history": "^0.86.0",
+    "slate-react": "^0.91.0",
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "yup": "^1.0.0",
-    "is-hotkey": "^0.2.0",
-    "slate": "^0.90.0",
-    "slate-history": "^0.86.0",
-    "slate-react": "^0.91.0"
+    "yup": "^1.0.0"
   },
   "volta": {
     "extends": "../../package.json"
