--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -8,9 +8,8 @@
     "dist/"
   ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsc",
-    "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build",
+    "build": "cross-env NODE_ENV=production tsup",
+    "prestart": "npm run build",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:ts": "tsup --watch",
     "dev:func": "func start -p 7073 --verbose --javascript",
@@ -36,15 +35,15 @@
     "@types/node": "^18.11.9",
     "@types/ramda": "^0.29.0",
     "@uzh-bf/design-system": "2.0.12",
-    "azure-functions-core-tools": "4.0.5198",
+    "azure-functions-core-tools": "4.0.5274",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
-    "rimraf": "^5.0.0",
-    "ts-node": "10.9.1",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
     "tsup": "7.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.1.6"
   },
   "volta": {
     "extends": "../../package.json"
