--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -8,7 +8,8 @@
     "dist/"
   ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsc",
+    "build": "cross-env NODE_ENV=production tsup",
+    "prestart": "npm run build",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:ts": "tsup --watch",
     "dev:func": "func start -p 7072 --verbose --javascript",
@@ -34,9 +35,10 @@
     "dotenv": "16.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
-    "ts-node": "10.9.1",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
     "tsup": "7.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.1.6"
   },
   "volta": {
     "extends": "../../package.json"
