--- a/.github/workflows/v3_klickeruzhprod-response-processor(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor(qa).yml
@@ -28,7 +28,9 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8.6.12
-          run_install: true
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
