--- a/.github/workflows/v3_klickeruzhprod-response-processor.yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor.yml
@@ -32,7 +32,7 @@ jobs:
         shell: pwsh
         run: |
           pnpm run build --scope @klicker-uzh/backend-response-processor
-          pnpm prune --prod
+          pnpm prune --prod --config.ignore-scripts=true
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
